# waterFmodtest

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/fmod/jni/water/waterfmod/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: fmod_jni_water_waterfmod_VoiceFixer.h  waterVoicer.cpp
app/src/main/java/fmod/jni/water/waterfmod/: MainActivity.java  VoiceFixer.java
app/src/main/res/values/: strings.xml
app/src/test/java/fmod/jni/water/waterfmod/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
